[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://small_font.tres" type="DynamicFont" id=5]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Floor" parent="." instance=ExtResource( 4 )]

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -198.0
margin_top = 78.817
margin_right = 202.0
margin_bottom = 118.918
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=40]Metor Mayhem[/wave][/center]"
text = "Metor Mayhem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.9234
margin_top = -260.838
margin_right = 32.0766
margin_bottom = -216.838
custom_fonts/font = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.782
margin_top = -105.827
margin_right = 172.218
margin_bottom = -34.8267
custom_fonts/font = ExtResource( 2 )
text = "Tap to move
Avoid the meteors"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
margin_top = 435.645
margin_right = 400.0
margin_bottom = 469.645
custom_fonts/font = ExtResource( 2 )
text = "<high score>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetHighScoreButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 565.0
margin_right = 160.885
margin_bottom = 580.0
custom_fonts/font = ExtResource( 5 )
text = "Reset high score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreProjectsButton" type="Button" parent="."]
margin_left = 267.286
margin_top = 565.0
margin_right = 392.286
margin_bottom = 580.0
custom_fonts/font = ExtResource( 5 )
text = "More projects"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ResetHighScoreButton" to="." method="_on_ResetHighScoreButton_pressed"]
[connection signal="pressed" from="MoreProjectsButton" to="." method="_on_MoreProjectsButton_pressed"]
